<resources>
    <string name="app_name">Bro Finder</string>

    <!-- Strings related to login -->
    <string name="activity_name">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phonenumber">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="loading">Loading</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
