<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xxair_forcexx.bro_finder.LoginActivity">

    <!-- Login progress -->


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1.58"
                app:srcCompat="@drawable/bro_finder_logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:hint="@string/prompt_name"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColorHint="#000000"
                    android:textColorLink="@android:color/holo_orange_dark"
                    android:textIsSelectable="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:hint="@string/prompt_phonenumber"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColorHint="#000000"
                    android:textColorLink="@android:color/holo_orange_dark"
                    android:textIsSelectable="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"

                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColorLink="@android:color/holo_orange_dark" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"

                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColorHint="#000000"
                    android:textColorLink="@android:color/holo_orange_dark"
                    android:textIsSelectable="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_column="5"
                android:layout_marginTop="20dp"
                android:layout_row="0"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/action_sign_up"
                android:textColor="#ffffff"
                android:textColorLink="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>